#[allow(unused_imports)]
[package]
name = "windexer-jito-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core Solana dependencies
solana-sdk = "2.1.10"
solana-program = "2.1.10"
solana-client = "2.1.10"
solana-account-decoder = "2.1.10"
anchor-lang = "0.30.1"

# Async runtime and utilities
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

# Logging and error handling
log = "0.4.25"
env_logger = "0.11.6"
thiserror = "2.0.11"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
dashmap = "6.1.0"

[dev-dependencies]
tokio-test = "0.4"


[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
